--- a/portfolio.html
+++ b/portfolio.html
@@ -32,5 +32,5 @@
   </iframe>
 </div>
 <hr style="background-color: black; width: 1328px; height: 50px; position: absolute; top: 950px; left: 7px;border: none">
-<a href="home.html"><button class="button1">HOME</button></a>
+<a href="index.html"><button class="button1">HOME</button></a>
 </body>
